--- a/RSI_ToteBoard.vbproj
+++ b/RSI_ToteBoard.vbproj
@@ -156,6 +156,7 @@
     <Compile Include="frmSplash.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="JMData.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
