--- a/app.config
+++ b/app.config
@@ -5,6 +5,11 @@
             <section name="RSI_Toteboard.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
+	<appSettings>
+		<add key="toteComPortNumber" value="1"/>
+		<add key="toteComSettings" value="9600,n,8,1"/>
+		<add key="skipNewOfficialStatusEvent" value="true"/>
+	</appSettings>
     <system.diagnostics>
         <sources>
             <!-- This section defines the logging configuration for My.Application.Log -->
